--- a/startbootstrap-grayscale-1.0.6/less/grayscale.less
+++ b/startbootstrap-grayscale-1.0.6/less/grayscale.less
@@ -141,6 +141,7 @@ a {
 }
 
 .intro {
+    position: relative; /* Force the overlay to size to this. */
     display: table;
     width: 100%;
     height: auto;
@@ -153,12 +154,22 @@ a {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    .intro-body {
+    .intro-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
         background: @bfade-fallback; /* For browsers that do not support gradients */
         background: -webkit-linear-gradient(@bfade-clr,@bfade-clr,@bfade-clr,@bfade-clr,@bfade-blk); /*Safari 5.1-6*/
         background: -o-linear-gradient(@bfade-clr,@bfade-clr,@bfade-clr,@bfade-clr,@bfade-blk); /*Opera 11.1-12*/
         background: -moz-linear-gradient(@bfade-clr,@bfade-clr,@bfade-clr,@bfade-clr,@bfade-blk); /*Fx 3.6-15*/
         background: linear-gradient(@bfade-clr,@bfade-clr,@bfade-clr,@bfade-clr,@bfade-blk); /*Standard*/
+    }
+    .intro-body {
         display: table-cell;
         vertical-align: middle;
         .brand-heading {
